--- a/package.json
+++ b/package.json
@@ -6,13 +6,27 @@
   "author": "Rostislav Berezhnoy <berezhnoy.rostislav@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "parcel public/index.html",
-    "build": "parcel build public/index.html",
-    "lint": "tsc --noEmit && eslint --fix \"**/*.@(js|jsx|ts|tsx)\""
+    "start": "parcel public/index.html --port 3000 --open",
+    "start-server": "npx json-server --watch db.json --port 5000",
+    "lint": "tsc --noEmit && eslint --fix \"**/*.@(js|jsx|ts|tsx)\"",
+    "prebuild": "run-s clean",
+    "build": "parcel build public/index.html --no-source-maps",
+    "clean": "rimraf ./dist"
+  },
+  "alias": {
+    "config": "./src/config",
+    "mvvm": "./src/mvvm",
+    "pages": "./src/pages",
+    "store": "./src/store",
+    "types": "./src/types"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "mobx": "^6.9.0",
+    "mobx-react": "^7.6.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "store": "^2.0.12"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.20.2",
