feat: added tailwind css and todolist component, fixes

--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
   "author": "Rostislav Berezhnoy <berezhnoy.rostislav@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "parcel public/index.html --port 3000 --open",
+    "start": "npx parcel public/index.html --port 3000 --open",
     "start-server": "npx json-server --watch db.json --port 5000",
     "lint": "tsc --noEmit && eslint --fix \"**/*.@(js|jsx|ts|tsx)\"",
-    "prebuild": "run-s clean",
+    "prebuild": "yarn run clean-linux && yarn run clean-windows",
     "build": "parcel build public/index.html --no-source-maps",
-    "clean": "rimraf ./dist"
+    "clean-linux": "node -e \"if (process.platform !== 'win32') process.exit(1)\" || rm -rf ./dist",
+    "clean-windows": "node -e \"if (process.platform === 'win32') process.exit(1)\" || rmdir /s /q dist"
   },
   "alias": {
+    "components": "./src/components",
     "config": "./src/config",
     "mvvm": "./src/mvvm",
     "pages": "./src/pages",
@@ -25,32 +27,34 @@
     "mobx": "^6.9.0",
     "mobx-react": "^7.6.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "store": "^2.0.12"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.20.2",
-    "@types/node": "18.16.3",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.1",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
+    "@babel/preset-env": "^7.21.5",
+    "@types/node": "20.0.0",
+    "@types/react": "^18.2.5",
+    "@types/react-dom": "^18.2.4",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
     "babel-plugin-named-exports-order": "^0.0.2",
     "eslint": "~8.39.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-optimize-regex": "^1.2.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-sonarjs": "^0.19.0",
     "eslint-plugin-unicorn": "^46.0.0",
     "parcel-bundler": "^1.12.5",
-    "prettier": "^2.6.2",
+    "postcss": "^7",
+    "postcss-import": "^15.1.0",
+    "prettier": "^2.8.8",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "typescript": "~5.0.4"
   }
 }
