--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
   "dependencies": {
     "axios": "^1.4.0",
     "mobx": "^6.9.0",
-    "mobx-react": "^7.6.0",
+    "mobx-react-lite": "^3.4.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.21.5",
