chore: cypress, refactoring

--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "license": "MIT",
   "scripts": {
     "start": "npx parcel public/index.html --port 3000 --open",
-    "start-server": "npx json-server --watch db.json --port 5000",
+    "start-server": "npx json-server --watch db.json --host 127.0.0.1 --port 5000",
     "lint": "tsc --noEmit && eslint --fix \"**/*.@(js|jsx|ts|tsx)\"",
+    "cypress:open": "cypress open",
     "prebuild": "yarn run clean-linux && yarn run clean-windows",
     "build": "parcel build public/index.html --no-source-maps",
     "clean-linux": "node -e \"if (process.platform !== 'win32') process.exit(1)\" || rm -rf ./dist",
@@ -38,6 +39,8 @@
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "babel-plugin-named-exports-order": "^0.0.2",
+    "cypress": "^12.13.0",
+    "dotenv": "^16.1.4",
     "eslint": "~8.39.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.8.0",
