chore: configs, refactoring

--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "start-server": "npx json-server --watch db.json --host 127.0.0.1 --port 5000",
     "lint": "tsc --noEmit && eslint --fix \"**/*.@(js|jsx|ts|tsx)\"",
     "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "cypress:run:record": "cypress run --record",
+    "cypress:run:chrome": "cypress run --browser chrome",
+    "cypress:run:headed": "cypress run --headed",
     "prebuild": "yarn run clean-linux && yarn run clean-windows",
     "build": "parcel build public/index.html --no-source-maps",
     "clean-linux": "node -e \"if (process.platform !== 'win32') process.exit(1)\" || rm -rf ./dist",
@@ -36,15 +40,16 @@
     "@types/node": "20.0.0",
     "@types/react": "^18.2.5",
     "@types/react-dom": "^18.2.4",
-    "@typescript-eslint/eslint-plugin": "^5.59.2",
-    "@typescript-eslint/parser": "^5.59.2",
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
+    "@typescript-eslint/parser": "^5.59.9",
     "babel-plugin-named-exports-order": "^0.0.2",
-    "cypress": "^12.13.0",
+    "cypress": "^12.14.0",
     "dotenv": "^16.1.4",
     "eslint": "~8.39.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-cypress": "^2.13.3",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-optimize-regex": "^1.2.1",
